Add drafts, encrypted profile photos, and dashboard
Introduce document draft workflow, per-user/admin dashboard counts, and encrypted profile photo handling. Key changes:
- DocumentsController: add draft support, improved validation, generateDocumentId(), drafts listing, show/download handlers, route model binding by document_id, and various refactors (file handling, statuses).
- Admin/Employee controllers: return dashboard counts (incoming/pending/outgoing/received) and add settings/profile views.
- Auth: correct post-login redirect logic for user types.
- ProfileController & requests: add encrypted profile photo upload/storage and retrieval, password update, birthdate handling; new migration to add profile_photo to users.
- Models: add relations and fillables (Classification↔Subclassification), fix Document attributes and add resolveRouteBinding, add profile_photo to User fillable.
- Migrations/seeders: change documents.document_id to string, add classification_id to subclassifications with mapping, update default seed user.
- Misc: add deploy script, register ViewServiceProvider, add bootstrap to frontend deps, enhance dark-mode CSS and add many view/component files.

These changes implement drafts, improve document ID handling, secure profile photos at rest, and enhance dashboard UX.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,11 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+deploy.php
+package-lock.json
+package.json
+config/app.php
+config/app.php.bak
+bootstrap/app.php
+config/app.php
+config/app.php
